# libvmod-api-auth

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
examples/: authentication-mongodb.vcl  authentication-redis.vcl  authentication-with-cache-for-get-requests.vcl  authentication.vcl
fixtures/: generate_curl.py
m4/: .keepme
src/: Makefile.am  authorization_helpers.c  authorization_helpers.h  backend.c  backend.h  database.c  database.h  database_mongo.c  database_mongo.h  database_redis.c  database_redis.h  vmod_authorization.c  vmod_authorization.vcc
src/backend/: mongodb.c
src/tests/: test01.vtc
